Added: UI Changes in SearchBar

--- a/CSS/BookListing.css
+++ b/CSS/BookListing.css
@@ -65,6 +65,8 @@
     opacity: 1;
 }
 .searchInput{
+    display: flex;
+    align-items: center;
     /* border: 1px solid blue; */
     height:100%;
     width:96%;
@@ -73,7 +75,8 @@
     width:98.5%;
     height:80%;
     border:1px solid transparent;
-    font: normal normal normal 12px/16px Roboto;
+    /* font: normal normal normal 12px/16px Roboto; */
+    font-size: 20px;
     letter-spacing: 0px;
     color: #9D9D9D;
     opacity: 1;
