--- a/CSS/cart.css
+++ b/CSS/cart.css
@@ -1,8 +1,10 @@
 .main-container{
     display: flex;
     flex-direction: column;
+    /* justify-content:center; */
+    /* align-items: center; */
     position: relative;
-    height:300vh;
+   min-height:50vh;
     width: 98vw;
     border: 1px solid red;
     
@@ -16,8 +18,8 @@
     flex-direction: row;
     align-items: center;
     width: 100%;
-    height:4%;
-    /* height: 60px; */
+    /* height:4%; */
+    height: 60px;
     /* border:1px solid blue; */
     background: #A03037 0% 0% no-repeat padding-box;
 
@@ -857,4 +859,365 @@
     opacity: 1;
     border: 1px solid transparent;  
     margin-left: 85%;  
+}
+
+
+/* MEDIA QUER FOR IPHONE 6 */
+
+
+@media only screen and (min-width: 350px) and (max-width: 400px)  {
+
+
+
+    .main-container{
+        justify-content:center;
+        align-items:center;
+    }
+    .bookIcon{
+        /*     border:1px solid green; */
+            height:25px;
+            width:30px;
+            margin-left:1%;
+        }
+        
+        .BOOKSTORE{
+            height:25px;
+            width:100px;
+            margin-left:5%;
+        }
+        
+        .searchInput{
+            display:none;
+        }
+        .searchInput1{
+            display:none;
+        }
+        .searchBar{
+            display:flex;
+            font-size:10px;
+            width:80px;
+            margin-left:1%;
+        }
+        .cart{
+            margin-left:auto;
+        }
+        
+        .user{
+            margin-left:auto;
+        }
+
+       
+        .flex-container1{
+            justify-content:center;
+            margin-top:10%;
+/*             border-top:1px solid blue; */
+        }
+
+        .header{
+
+            /* margin-left:-1%; */
+        }
+
+        .bookContainer{
+/*             display:none; */
+            border:1px solid blue;
+/*             width:105px; */
+            height:75px;
+        }
+
+        .cart-container{
+            width:300px;
+            margin-left: 0%;
+            /* justify-content */
+/*             border:1px solid red; */
+        }
+
+        .pOrder{
+            width:300px;
+            margin-left: 0%;
+            /* border:1px solid red; */
+        }
+        .bookHead{
+            /* border:1px solid red; */
+            width:250px;
+            justify-content:center;
+/*             align-items:center; */
+        }
+
+        .detailContainer{
+            /* border:1px solid red; */
+        }
+
+        .cntButton{
+            display:flex;
+            justify-content:center;
+            align-items:center;
+            border: 1px solid transparent;
+            margin-left:60%;
+            background: #3371B5 0% 0% no-repeat padding-box;
+            width: 100px;
+            height: 35px;
+            color:#FFFFFF;
+            background: #3371B5 0% 0% no-repeat padding-box;
+            border-radius: 3px;
+            opacity: 1;
+        }
+
+        
+     .checkoutButton {
+        width: 100px;
+        height: 35px;
+        background: #3371B5 0% 0% no-repeat padding-box;
+        border-radius: 3px;
+        opacity: 1;
+        border: 1px solid transparent;
+        margin-left: 60%;
+    }
+
+    .AddressDetails{
+        width: 300px;
+        margin-left: 0%;
+    }
+    .CustomerDetails{
+        margin-left:0%;
+        width: 300px;
+    }
+
+    .OrderSummary{
+        width:300px;
+        margin-left: 0%;
+
+    }
+
+    .OrderSummary1{
+        width:300px;
+        margin-left: 0%;
+    }
+
+      
+
+}
+
+
+
+
+/* MEDIA QUER FOR IPHONE 5 */
+
+
+@media only screen and (min-width: 300px) and (max-width: 370px)  {
+
+
+
+    .main-container{
+        justify-content:center;
+        align-items:center;
+    }
+
+    .bookIcon{
+        /*     border:1px solid green; */
+            height:25px;
+            width:30px;
+            margin-left:1%;
+        }
+        
+        .BOOKSTORE{
+            height:25px;
+            width:100px;
+            margin-left:5%;
+        }
+        
+        .searchInput{
+            display:none;
+        }
+        .searchInput1{
+            display:none;
+        }
+        .searchBar{
+            display:flex;
+            font-size:10px;
+            width:80px;
+            margin-left:1%;
+        }
+        .cart{
+            margin-left:auto;
+        }
+        
+        .user{
+            margin-left:auto;
+        }
+
+       
+        .flex-container1{
+            justify-content:center;
+            margin-top:10%;
+/*             border-top:1px solid blue; */
+        }
+
+       
+
+        .bookContainer{
+/*             display:none; */
+            /* border:1px solid blue; */
+/*             width:105px; */
+            height:75px;
+        }
+
+        .cart-container{
+            width:250px;
+            margin-left: 0%;
+            /* justify-content */
+/*             border:1px solid red; */
+        }
+        .pOrder{
+            width:250px;
+            margin-left: 0%;
+            /* border:1px solid red; */
+        }
+        .placeOrder {
+            background: #3371B5 0% 0% no-repeat padding-box;
+            border-radius: 2px;
+            border: 1px solid transparent;
+            height: 30px;
+            width:100px;
+            opacity: 1;
+            text-align: left;
+            margin-left: 50%;
+            font-size:12px;
+            font-family: Lato;
+            /* font: normal normal medium 5px/17px Lato; */
+            letter-spacing: 0px;
+            color: #FFFFFF;
+            text-transform: uppercase;
+            opacity: 1;
+        }
+        .bookHead{
+            /* border:1px solid red; */
+            width:220px;
+            justify-content:center;
+/*             align-items:center; */
+        }
+
+        .cntButton{
+            display:flex;
+            justify-content:center;
+            align-items:center;
+            border: 1px solid transparent;
+            margin-left:60%;
+            background: #3371B5 0% 0% no-repeat padding-box;
+            width: 100px;
+            height: 35px;
+            color:#FFFFFF;
+            background: #3371B5 0% 0% no-repeat padding-box;
+            border-radius: 3px;
+            opacity: 1;
+        }
+
+        
+     .checkoutButton {
+        width: 100px;
+        height: 35px;
+        background: #3371B5 0% 0% no-repeat padding-box;
+        border-radius: 3px;
+        opacity: 1;
+        border: 1px solid transparent;
+        margin-left: 60%;
+    }
+
+  
+    .AddressDetails{
+        width: 250px;
+        margin-left: 0%;
+    }
+    .CustomerDetails{
+        margin-left:0%;
+        width: 250px;
+    }
+
+    .OrderSummary{
+        width:250px;
+        margin-left: 0%;
+
+    }
+
+    .OrderSummary1{
+        width:250px;
+        margin-left: 0%;
+    }
+
+
+
+}
+
+
+
+/* MEDIA QUERY FOR IPAD */
+
+@media only screen and (min-width: 750px) and (max-width: 800px)  {
+
+    
+      
+    .bookIcon{
+        /*     border:1px solid green; */
+            height:25px;
+            width:30px;
+/*             margin-left:%; */
+        }
+        
+        .BOOKSTORE{
+            height:25px;
+            width:100px;
+            /* margin-left:%; */
+        }
+        
+        .searchInput{
+/*             display:none; */
+        }
+        .searchInput1{
+/*             display:none; */
+        }
+        .searchBar{
+            display:flex;
+            font-size:10px;
+            width:280px;
+/*             margin-left:10%; */
+        }
+        .cart{
+/*             margin-left:50px; */
+        }
+        
+        .user{
+            margin-left:10%;
+        }
+
+        .flex-container1{
+/*             justify-content:center; */
+            margin-top:10%;
+            /* border-top:1px solid blue; */
+        }
+
+        .header{
+
+            /* margin-left:-1%; */
+        }
+
+        .placeOrder {
+            background: #3371B5 0% 0% no-repeat padding-box;
+            border-radius: 2px;
+            border: 1px solid transparent;
+            height: 30px;
+            width:100px;
+            opacity: 1;
+            text-align: left;
+            /* margin-left: 50%; */
+            font-size:12px;
+            font-family: Lato;
+            /* font: normal normal medium 5px/17px Lato; */
+            letter-spacing: 0px;
+            color: #FFFFFF;
+            text-transform: uppercase;
+            opacity: 1;
+        }
+ 
+    
+    
 }
