Added: Responsiveness for Iphone5,6 and Ipad

--- a/CSS/Signin_Signup.css
+++ b/CSS/Signin_Signup.css
@@ -91,11 +91,11 @@
     display:flex;
     flex-direction: column;
     position: absolute;
-    top: 24%;
+    top: 20%;
     /* display: none; */
     /* left: 727px; */
     width: 70%;
-    height: 75%;
+    min-height: 75%;
     background: #FFFFFF 0% 0% no-repeat padding-box;
     /* border: 1px solid #FF001C; */
     /* border-radius: 2px; */
@@ -141,7 +141,7 @@
     flex-direction: row;
     align-items: flex-end;
     width: 200px;
-    height: 15px;
+    height: 10px;
     text-align: left;
     font: normal normal normal 10px/13px Roboto;
     letter-spacing: 0px;
@@ -156,7 +156,7 @@
     flex-direction: row;
     align-items: flex-end;
     width: 200px;
-    height: 15px;
+    height: 10px;
     text-align: left;
     /* border: 0.5px solid blue; */
     font: normal normal normal 10px/13px Roboto;
@@ -357,4 +357,64 @@
     border-radius: 3px;
     opacity: 1;
     color: #0A0102;
+}
+
+
+/* MEDIA QUERY FOR IPHONE6 */
+
+@media only screen and (min-width: 350px) and (max-width: 400px)  {
+
+    .imgcard{
+        display:none;
+    }
+    .sign{
+        width:90%;
+        left: 5%;
+        top:2%;
+    }
+
+}
+
+/* MEDIA QUERY FOR IPHONE5*/
+
+
+@media only screen and (min-width: 250px) and (max-width: 340px)  {
+
+   
+    .imgcard{
+        display:none;
+    }
+    .sign{
+        width:90%;
+        height:65%;
+        left: 6%;
+        top:2%;
+    }
+
+    .signup{
+        left:53%;
+    }
+
+}
+
+
+/* MEDIA QUERY FOR IPAD */
+
+
+@media only screen and (min-width: 750px) and (max-width: 800px)  {
+   
+    .imgcard{
+        top:20%;
+        left:10%;
+        height:35%;
+
+    }
+    .sign{
+        left:50%;
+        width:40%;
+        height:39%;
+        top:18%;
+/*         display:none */
+    }
+
 }
