--- a/CSS/wishlist.css
+++ b/CSS/wishlist.css
@@ -2,9 +2,9 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    height:200vh;
+    min-height:90vh;
     width: 98vw;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     
 }
 *:focus {
@@ -16,7 +16,7 @@
     flex-direction: row;
     align-items: center;
     width: 100%;
-    height:5%;
+    height:60px;
     /* border:1px solid blue; */
     background: #A03037 0% 0% no-repeat padding-box;
 
@@ -165,19 +165,19 @@
     opacity: 1;
 }
 .wi{
-    margin-left: 8%;
+    /* margin-left: 8%; */
 }
 
 .wish-container{
     /* position: absolute; */
     display: flex;
     flex-direction: column;
-    overflow:auto;
+    /* overflow:auto; */
     min-height:300px;
     width:81%;
     /* margin-top: 6%; */
     margin-left: 12%;
-    border: 1px solid rgb(112, 68, 68);
+    /* border: 1px solid rgb(112, 68, 68); */
 }
 /* .cartHead{
     display: flex;
@@ -207,8 +207,9 @@
 .detailContainer{
     display: flex;
     flex-direction: column;
-    height: 85px;
+    height: 130px;
     width: 73%;
+
     margin-left: 5%;
     /* border: 1px solid red; */
 }
@@ -219,7 +220,8 @@
     /* display: flex; */
     text-align: left;
     height:20%;
-    width:100%;
+    width:150px;
+    margin-top: 3.5%;
     font: normal normal normal 14px/17px Lato;
     letter-spacing: 0px;
     color: #0A0102;
@@ -236,7 +238,7 @@
     color: #9D9D9D;
     opacity: 1;
     height:20%;
-    width:100%;
+    width:150px;
 
     /* border:2px solid #9D9D9D; */
 }
@@ -246,7 +248,7 @@
     align-items:center;
     flex-direction: row;
     height:30%;
-    width: 100px;
+    width: 75px;
     /* border: 1px solid blue; */
 
 }
@@ -257,6 +259,7 @@
     letter-spacing: 0px;
     color: #0A0102;
     opacity: 1;
+    /* border: 1px solid blue; */
     
 
 
@@ -269,27 +272,524 @@
     letter-spacing: 0px;
     color: #9D9D9D;
     opacity: 1;
+    /* border: 1px solid black; */
 
 
+}
+
+
+.WB{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+/*     position:absolute; */
+    height:30px;
+    width:100px;
+    margin-left:75%;
+    margin-top:-10%;
+    /* border: 1px solid red; */
+  
 }
 
 .removeWish{
     display: flex;
     justify-content:center;
     /* position: absolute; */
-    margin-left:90%;
-    margin-top: -6%;
-    height: 35;
-    width: 45px;
-    /* border: 4px solid blue; */
+    /* margin-left:10px; */
+    /* margin-top: -6%; */
+    height: 30px;
+    width: 30px;
+    /* border: 1px solid blue; */
 }
 .aCart{
     display: flex;
-    margin-left:75%;
+    /* margin-left:10px; */
+    /* position: absolute; */
+    /* z-index: 3; */
     justify-content: center;
     align-items:center;
     /* border: 1px solid blue; */
-    height: 35px;
-    width: 45px;
-    margin-top: -4.6%;;
+    height: 30px;
+    width: 30px;
+    /* margin-top: -4.6%;; */
+}
+
+
+
+/* MEDIA QUER FOR IPHONE 6 */
+
+
+@media only screen and (min-width: 350px) and (max-width: 400px)  {
+
+
+
+    .main-container{
+        justify-content:center;
+        align-items:center;
+    }
+    .bookIcon{
+            /* border:1px solid green; */
+            height:25px;
+            width:30px;
+            margin-left:1%;
+        }
+        
+        .BOOKSTORE{
+            height:25px;
+            width:100px;
+            margin-left:5%;
+        }
+        
+        .searchInput{
+            display:none;
+        }
+        .searchInput1{
+            display:none;
+        }
+        .searchBar{
+            display:flex;
+            font-size:10px;
+            width:80px;
+            margin-left:1%;
+        }
+        .cart{
+            margin-left:auto;
+        }
+        
+        .user{
+            margin-left:auto;
+        }
+
+       
+        .flex-container1{
+            justify-content:center;
+            margin-top:10%;
+/*             border-top:1px solid blue; */
+        }
+
+        .header{
+
+            /* margin-left:-1%; */
+        }
+
+        .bookContainer{
+/*             display:none; */
+            /* border:1px solid blue; */
+/*             width:105px; */
+            height:75px;
+        }
+
+        .wish-container{
+            width:300px;
+            margin-left: 0%;
+            /* justify-content */
+/*             border:1px solid red; */
+        }
+
+        .wishHead{
+            margin-left: 0%;
+            width: 300px;
+        }
+
+      
+        .bookHead{
+            /* border:1px solid red; */
+            width:250px;
+            justify-content:center;
+/*             align-items:center; */
+        }
+
+        .detailContainer{
+            /* border:1px solid red; */
+        }
+
+        .bookName1{
+            width:150px;
+            margin-top:16%;
+            /* border:1px solid red; */
+        }
+
+        .author1{
+            width: 75px;
+            /* border:1px solid red; */
+        }
+
+        .price11{
+            /* border:1px solid red; */
+        }
+        .price1{
+            /* border:1px solid red; */
+        }
+
+        .removeWish{
+            /* border:1px solid red; */
+        }
+
+        .aCart{
+            /* border:1px solid red; */
+        }
+
+              
+.WB{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    /* border: 1px solid red; */
+    position:absolute;
+    height:30px;
+    width:73px;
+    margin-left:25%;
+    margin-top: 15%;
+}
+
+.removeWish{
+    display: flex;
+    justify-content:center;
+    /* position: absolute; */
+    /* margin-left:10px; */
+    /* margin-top: -6%; */
+    margin-left:1px;
+    height: 25px;
+    width: 25px;
+    /* border: 1px solid red; */
+}
+.aCart{
+    display: flex;
+    /* margin-left:10px; */
+    /* position: absolute; */
+    /* z-index: 3; */
+    justify-content: center;
+    align-items:center;
+    margin-left: 0%;
+    /* border: 1px solid red; */
+    height: 25px;
+    width: 25px;
+    /* margin-top: -4.6%;; */
+}
+
+
+        /* .author1{
+            text-align: left;
+            font: normal normal normal 10px/12px Lato;
+            letter-spacing: 0px;
+            color: #9D9D9D;
+            opacity: 1;
+            height:20%;
+            width:100%;
+        
+            /* border:2px solid #9D9D9D; */
+        }
+    
+
+
+
+/* MEDIA QUER FOR IPHONE 5 */
+
+
+@media only screen and (min-width: 300px) and (max-width: 370px)  {
+
+
+
+    .main-container{
+        justify-content:center;
+        align-items:center;
+    }
+
+    .bookIcon{
+        /*     border:1px solid green; */
+            height:25px;
+            width:30px;
+            margin-left:1%;
+        }
+        
+        .BOOKSTORE{
+            height:25px;
+            width:100px;
+            margin-left:5%;
+        }
+        
+        .searchInput{
+            display:none;
+        }
+        .searchInput1{
+            display:none;
+        }
+        .searchBar{
+            display:flex;
+            font-size:10px;
+            width:80px;
+            margin-left:1%;
+        }
+        .cart{
+            margin-left:auto;
+        }
+        
+        .user{
+            margin-left:auto;
+        }
+
+       
+        .flex-container1{
+            justify-content:center;
+            margin-top:10%;
+/*             border-top:1px solid blue; */
+        }
+
+       
+
+        .bookContainer{
+/*             display:none; */
+            /* border:1px solid blue; */
+/*             width:105px; */
+            height:75px;
+        }
+
+        .wish-container{
+            width:250px;
+            margin-left: 0%;
+            /* justify-content */
+/*             border:1px solid red; */
+        }
+
+        .bookHead{
+            /* border:1px solid red; */
+            width:220px;
+            justify-content:center;
+/*             align-items:center; */
+        }
+
+
+        .detailContainer{
+            /* border:1px solid red; */
+        }
+
+        .bookName1{
+            width:150px;
+            margin-top:18%;
+            /* border:1px solid red; */
+        }
+
+        .author1{
+            width: 75px;
+            /* border:1px solid red; */
+        }
+
+        .price11{
+            /* border:1px solid red; */
+        }
+        .price1{
+            /* border:1px solid red; */
+        }
+
+        .removeWish{
+            /* border:1px solid red; */
+        }
+
+        .aCart{
+            /* border:1px solid red; */
+        }
+
+        /* .author1{
+            text-align: left;
+            font: normal normal normal 10px/12px Lato;
+            letter-spacing: 0px;
+            color: #9D9D9D;
+            opacity: 1;
+            height:20%;
+            width:100%;
+        
+            /* border:2px solid #9D9D9D; */
+        /* } */
+        
+        .price1{
+            display: flex;
+            align-items:center;
+            flex-direction: row;
+            height:30%;
+            width: 70px;
+            /* border: 1px solid blue; */
+        
+        } 
+
+        
+.WB{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    /* border: 1px solid red; */
+    position:absolute;
+    height:30px;
+    width:73px;
+    margin-left:25%;
+    margin-top: 15%;
+}
+
+.removeWish{
+    display: flex;
+    justify-content:center;
+    /* position: absolute; */
+    /* margin-left:10px; */
+    /* margin-top: -6%; */
+    margin-left:1px;
+    height: 25px;
+    width: 25px;
+    /* border: 1px solid red; */
+}
+.aCart{
+    display: flex;
+    /* margin-left:10px; */
+    /* position: absolute; */
+    /* z-index: 3; */
+    justify-content: center;
+    align-items:center;
+    margin-left: 0%;
+    /* border: 1px solid red; */
+    height: 25px;
+    width: 25px;
+    /* margin-top: -4.6%;; */
+}
+
+
+
+    
+
+
+
+}
+
+
+
+/* MEDIA QUERY FOR IPAD */
+
+@media only screen and (min-width: 750px) and (max-width: 800px)  {
+
+    
+      
+    .bookIcon{
+        /*     border:1px solid green; */
+            height:25px;
+            width:30px;
+/*             margin-left:%; */
+        }
+        
+        .BOOKSTORE{
+            height:25px;
+            width:100px;
+            /* margin-left:%; */
+        }
+        
+        .searchInput{
+/*             display:none; */
+        }
+        .searchInput1{
+/*             display:none; */
+        }
+        .searchBar{
+            display:flex;
+            font-size:10px;
+            width:280px;
+/*             margin-left:10%; */
+        }
+        .cart{
+/*             margin-left:50px; */
+        }
+        
+        .user{
+            margin-left:10%;
+        }
+
+        .flex-container1{
+/*             justify-content:center; */
+            margin-top:10%;
+            /* border-top:1px solid blue; */
+        }
+        .bookName1{
+            width:150px;
+            margin-top:7%;
+            /* border:1px solid red; */
+        }
+
+        .author1{
+            width: 75px;
+            /* border:1px solid red; */
+        }
+
+        .price11{
+            /* border:1px solid red; */
+        }
+        .price1{
+            /* border:1px solid red; */
+        }
+
+        .removeWish{
+            /* border:1px solid red; */
+        }
+
+        .aCart{
+            /* border:1px solid red; */
+        }
+
+        /* .author1{
+            text-align: left;
+            font: normal normal normal 10px/12px Lato;
+            letter-spacing: 0px;
+            color: #9D9D9D;
+            opacity: 1;
+            height:20%;
+            width:100%;
+        
+            /* border:2px solid #9D9D9D; */
+        /* } */
+        
+        .price1{
+            display: flex;
+            align-items:center;
+            flex-direction: row;
+            height:30%;
+            width: 80px;
+            /* border: 1px solid blue; */
+        
+        } 
+
+        .WB{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+        /*     position:absolute; */
+            height:30px;
+            width:100px;
+            margin-left:70%;
+            margin-top:-18%;
+            /* border: 1px solid red; */
+          
+        }
+
+.removeWish{
+    display: flex;
+    justify-content:center;
+    /* position: absolute; */
+    /* margin-left:10px; */
+    /* margin-top: -6%; */
+    height: 30px;
+    width: 30px;
+    /* border: 1px solid blue; */
+}
+.aCart{
+    display: flex;
+    /* margin-left:10px; */
+    /* position: absolute; */
+    /* z-index: 3; */
+    justify-content: center;
+    align-items:center;
+    /* border: 1px solid blue; */
+    height: 30px;
+    width: 30px;
+    /* margin-top: -4.6%;; */
+}
+
+
+
+    
+
+    
 }
