Refactored UI Changes

--- a/CSS/displayBook.css
+++ b/CSS/displayBook.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     position: relative;
     height:200vh;
-    width: 98vw;
+    width: 100vw;
     /* border: 1px solid red; */
     
 }
@@ -340,8 +340,7 @@
 .bookName1{
     display: flex;
     text-align: left;
-    font-size: 40px;
-    font-family: Roboto;
+    font: normal normal normal 28px/37px Roboto;
     letter-spacing: 0px;
     color: #0A0102;
     opacity: 1;
@@ -350,10 +349,10 @@
 .author1{
     display: flex;
     text-align: left;
-    font: normal normal normal 20px/13px Roboto;
+    font: normal normal normal 18px/24px Roboto;
     letter-spacing: 0px;
     color: #878787;
-    opacity: 1;  
+    opacity: 1;
 }
 
 .rating1{
@@ -391,13 +390,18 @@
 }
 
 .price11{
-    font-size: 45px;
+    text-align: left;
+    font: 30px Roboto;
+    letter-spacing: 0px;
+    color: #0A0102;
+    opacity: 1; 
 
 }
 
 .originalPrice1{
+    text-align: left;
     text-decoration: line-through;
-    font: normal normal normal 20px/13px Roboto;
+    font: normal normal normal 15px/20px Roboto;
     letter-spacing: 0px;
     color: #878787;
     opacity: 1;
@@ -413,12 +417,11 @@
     display: flex;
     align-items: flex-end;
     height:40px;
-    font: normal normal normal 20px/13px Roboto;
+    text-align: left;
+    font: 15px Roboto;
     letter-spacing: 0px;
     color: #878787;
-    margin-top: 1%;
     opacity: 1;
-    /* border:1px solid red; */
 
 }
 
@@ -426,14 +429,11 @@
     display: flex;
     /* align-items: center; */
     height:110px;
-    font: normal normal normal 15px/13px Roboto;
+    text-align: left;
+    font: normal normal normal 15px/16px Roboto;
     letter-spacing: 0px;
-    color: #878787;
-    margin-top: 10px;
+    color: #373434;
     opacity: 1;
-    /* border: 1px solid red; */
-    /* border-bottom:1px solid grey; */
-
 }
 
 .feedbackContainer{
@@ -449,9 +449,10 @@
 
 .cfeed{
     display:flex;
-    width: 200px;
+    width: 100%;
     height: 40px;
     text-align: left;
+    border-top: 1px solid grey;
     /* border:1px solid yellow; */
     font: normal normal normal 18px/24px Roboto;
     letter-spacing: 0px;
@@ -602,6 +603,7 @@
 @media only screen and (min-width: 250px) and (max-width: 340px) {
     .main-container{
         width:100%;
+        /* margin-left: 0%; */
     }
     .bookIcon{
         /*     border:1px solid green; */
@@ -613,7 +615,7 @@
         .BOOKSTORE{
             height:25px;
             width:100px;
-            margin-left:5%;
+            margin-left:0%;
         }
         
         .searchInput{
@@ -635,6 +637,20 @@
         .user{
             margin-left:auto;
         }
+
+        .userOptions{
+            /* display: flex; */
+            /* flex-direction: column; */
+            height:80px;
+            width:70px;
+            position:absolute;
+            z-index: 1;
+            /* margin-left:65%; */
+            margin-top:15%;
+            border:1px solid grey;
+           
+        }
+
 
         .flex-container11{
             flex-direction:column;
@@ -665,6 +681,8 @@
         
         .header{
             width:100%;
+            height:45px;
+            margin-left:-1.5%;
         }
 
         .sButton{
@@ -697,7 +715,7 @@
         .BOOKSTORE{
             height:25px;
             width:100px;
-            margin-left:5%;
+            /* margin-left:5%; */
         }
         
         .searchInput{
@@ -720,6 +738,18 @@
             margin-left:auto;
         }
 
+        .userOptions{
+            /* display: flex; */
+            /* flex-direction: column; */
+            height:90px;
+            width:80px;
+            position:absolute;
+            z-index: 1;
+            /* margin-left:65%; */
+            margin-top:15%;
+            border:1px solid grey;
+           
+        }
 
         .flex-container11{
             flex-direction:column;
