--- a/CSS/displayBook.css
+++ b/CSS/displayBook.css
@@ -337,6 +337,36 @@
 
 }
 
+.alWish{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* height:40%;
+    width: 45%; */
+    display: none;
+
+    height:40px;
+    width:170px;
+    color:#F5F5F5;
+    background-color: #373434;
+
+}
+
+.alWish1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* height:40%;
+    width: 45%; */
+    display: none;
+
+    height:40px;
+    width:170px;
+    color:#F5F5F5;
+    background-color: #373434;
+
+}
+
 .bookName1{
     display: flex;
     text-align: left;
